# fiap-mba-engdados-fase03

./: Makefile  README.md  pyproject.toml
00-instalacao/: 01-download-dataset.sh  02-break-dataset.sh  03-infra.sh  README.md
00-instalacao/terraform/: kinesis-firehose.tf  provider.tf  s3.tf  sqs-dlq.tf  variables.tf
01-start/: README.md  start.sh
02-ingestao-manual/: 02-from-s3-csv-to-sqs.py  03-from-sqs-to-s3-json.py  04-from-s3-json-to-sqs.py  05-from-sqs-to-firehose.py
02-ingestao-manual/util/: KinesisHandler.py  S3Handler.py  SQSHandler.py
03-ingestao-eventos/lambdas/lambda-from-cvs-to-json/: serverless.yml
03-ingestao-eventos/lambdas/lambda-to-firehose-from-sqs/: serverless.yml
03-ingestao-eventos/lambdas/lambda-to-sqs-from-s3/: serverless.yml
04-transformacao/: README.md  job-json-to-parquet.py
05-consumo/: README.md  consulta-ingested-json.sql  consulta-parquet.sql
infra/: s3.tf  sqs_dlq.tf  variables.tf
