[tool.poetry]
name = "fase03"
version = "0.1.0"
description = ""
authors = ["Taluna Mendes <taluna.mendes_thoughtworks@prestador.globo>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
kaggle = "^1.5.12"
boto3 = "^1.24.91"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

